--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
     "php": ">=5.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.5"
+    "phpunit/phpunit": "^4.8"
   },
   "autoload": {
     "psr-4": {
-      "Nelexa\\Buffer\\": "src"
+      "": "src"
     }
   }
 }
