--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,22 @@
 {
   "name": "nelexa/buffer",
-  "description": "Buffer read and write binary files",
+  "description": "Reading And Writing Binary Data (incl. primitive types, ex. byte, ubyte, short, ushort, int, uint, long). The classes also help with porting the I/O operations of the JAVA code.",
+  "type": "library",
+  "keywords": [
+    "binary",
+    "primitive",
+    "byte",
+    "ubyte",
+    "short",
+    "ushort",
+    "int",
+    "uint",
+    "long",
+    "io",
+    "java",
+    "pack",
+    "unpack"
+  ],
   "license": "MIT",
   "authors": [
     {
