--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     }
   ],
   "require": {
-    "php-64bit": ">=5.4"
+    "php": ">=5.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.8"
